--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,22 @@
 <!--    layout_constraintLeft_toLeftOf=parent-->
 <!--    layout_constraintRight_toRightOf=parent-->
 <!--    layout_constraintTop_toTopOf=parent-->
+    <!-- Banner Section -->
+    <TextView
+        android:id="@+id/banner_title"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="@string/banner_title"
+        android:textColor="@android:color/white"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <TextView
         android:id="@+id/textView"
         style="@style/MyTextView"
