--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -76,7 +76,7 @@
         android:id="@+id/datePicker"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:datePickerMode="calendar"
+        android:datePickerMode="spinner"
         android:calendarViewShown="false"
         android:layout_marginTop="8dp"
         android:layout_marginHorizontal="16dp"
