--- a/app/src/main/res/layout/activity_3.xml
+++ b/app/src/main/res/layout/activity_3.xml
@@ -11,29 +11,142 @@
 <!--    layout_constraintStart_toStartOf=parent-->
 <!--    layout_constraintTop_toTopOf=parent-->
     <TextView
+        android:id="@+id/titleBanner"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="@string/travel_assistant"
+        android:textColor="@android:color/white"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/checklistTitle"
         style="@style/MyTextView"
-        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:text="@string/travel_checklist"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toBottomOf="@id/titleBanner"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <!-- Add New Item Section -->
+    <EditText
+        android:id="@+id/newItemInput"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/new_item_hint"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/activity3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        app:layout_constraintTop_toBottomOf="@id/checklistTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@id/addItemButton"/>
+
+    <Button
+        android:id="@+id/addItemButton"
+        style="@style/MyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_item"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="@id/newItemInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/newItemInput"/>
+
+    <!-- Checklist Section -->
+    <ScrollView
+        android:id="@+id/checklistScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintTop_toBottomOf="@id/newItemInput"
+        app:layout_constraintBottom_toTopOf="@id/emergencyTitle">
+
+        <LinearLayout
+            android:id="@+id/checklistContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/checkPassport"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/passport"/>
+
+            <CheckBox
+                android:id="@+id/checkTickets"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tickets"/>
+
+            <CheckBox
+                android:id="@+id/checkVisa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/visa"/>
+
+            <CheckBox
+                android:id="@+id/checkHotel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hotel"/>
+
+            <CheckBox
+                android:id="@+id/checkInsurance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/insurance"/>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <!-- Emergency Contacts -->
+    <TextView
+        android:id="@+id/emergencyTitle"
+        style="@style/MyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/emergency_contacts"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@id/emergencyContact"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <EditText
+        android:id="@+id/emergencyContact"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/emergency_contact_hint"
+        android:inputType="phone"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="8dp"
+        android:importantForAutofill="no"
+        app:layout_constraintBottom_toTopOf="@id/goBack3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 <!--    layout_constraintStart_toStartOf=parent-->
 <!--    layout_constraintTop_toBottomOf=@+id/textView3-->
+    <!-- Back Button (Bottom position) -->
     <Button
         android:id="@+id/goBack3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="100dp"
         android:text="@string/go_back"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView3"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
