--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -30,11 +30,10 @@
         android:id="@+id/goBack2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="152dp"
         android:text="@string/go_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/titleText"
-        app:layout_constraintBottom_toBottomOf="@id/titleText"/>
+        app:layout_constraintTop_toBottomOf="@+id/saveButton" />
 
     <TextView
         android:id="@+id/destinationLabel"
@@ -158,15 +157,15 @@
 
     <Button
         android:id="@+id/saveButton"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/save_trip"
-        style="@style/MyButton"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/budgetEditText"
+        android:text="@string/save_trip"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/budgetEditText" />
 
 
 <!--    layout_constraintStart_toStartOf=parent-->
