--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,112 +11,161 @@
 <!--    layout_constraintRight_toRightOf=parent-->
 <!--    layout_constraintTop_toTopOf=parent-->
     <!-- Banner Section -->
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/paris"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="92dp"
+        android:text="@string/qatar"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="88dp"
+        android:text="@string/miami"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="44dp"
+        android:src="@drawable/qatar"
+        android:contentDescription="@string/qatar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="80dp"
+        android:src="@drawable/paris"
+        android:contentDescription="@string/paris"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="44dp"
+        android:src="@drawable/miami"
+        android:contentDescription="@string/miami"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/banner_title" />
+
     <TextView
         android:id="@+id/banner_title"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:background="@color/colorPrimary"
         android:gravity="center"
+        android:padding="16dp"
         android:text="@string/banner_title"
         android:textColor="@android:color/white"
         android:textSize="36sp"
         android:textStyle="bold"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/textView"
-        style="@style/MyTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--    layout_constraintBottom_toBottomOf=parent-->
+    <!--    layout_constraintBottom_toBottomOf=parent-->
 <!--    layout_constraintEnd_toEndOf=parent-->
 <!--    layout_constraintStart_toStartOf=parent-->
 <!--    layout_constraintTop_toTopOf=parent-->
 <!--    layout_constraintVertical_bias=0.184-->
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="126dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:max="50"
-        android:progress="20"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
 
 
-<!--    layout_constraintBottom_toBottomOf=parent-->
+    <!--    layout_constraintBottom_toBottomOf=parent-->
 <!--    layout_constraintEnd_toEndOf=parent-->
 <!--    layout_constraintHorizontal_bias=0.45-->
 <!--    layout_constraintStart_toStartOf=parent-->
 <!--    layout_constraintTop_toBottomOf=@+id/seekBar-->
-    <CheckBox
-        android:id="@+id/checkBox"
-        style="@style/MyCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="CheckBox"
-        app:layout_constraintBottom_toBottomOf ="parent"
-        app:layout_constraintEnd_toEndOf ="parent"
-        app:layout_constraintHorizontal_bias ="0.5"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintStart_toStartOf ="parent"
-        app:layout_constraintTop_toBottomOf ="@id/seekBar" />
 
 
-<!--    layout_constraintBottom_toBottomOf=parent-->
+    <!--    layout_constraintBottom_toBottomOf=parent-->
 <!--    layout_constraintEnd_toEndOf=parent-->
 <!--    layout_constraintStart_toStartOf=parent-->
 <!--    layout_constraintTop_toBottomOf=@+id/textView-->
 <!--    layout_constraintVertical_bias=0.15-->
 <!--    textColor=-->
+
+
+    <!--    layout_constraintStart_toStartOf=parent-->
+<!--    layout_constraintTop_toBottomOf=@+id/myLongButton-->
+
     <Button
         android:id="@+id/goTo2Button"
         style="@style/MyButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="36dp"
         android:padding="10dp"
         android:text="@string/go_to_2"
+        android:textColor="#212121"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintEnd_toStartOf="@+id/goTo3Button"
+        app:layout_constraintHorizontal_bias="0.373"
+        app:layout_constraintStart_toStartOf="parent" />
 
-
-<!--    layout_constraintStart_toStartOf=parent-->
-<!--    layout_constraintTop_toBottomOf=@+id/myLongButton-->
     <Button
         android:id="@+id/goTo3Button"
         style="@style/MyButton"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="36dp"
+        android:text="@string/go_to_3"
+        android:textColor="#212121"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.881"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="52dp"
+        android:contentDescription="@string/barcelona"
+        android:src="@drawable/barcelona"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/banner_title" />
+
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="76dp"
-        android:text="@string/go_to_3"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/barcelona"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/goTo2Button" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
