--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,4 +39,13 @@
         <item name="android:padding">20dp</item>
         <item name="android:layout_margin">10dp</item>
     </style>
+
+    <style name="PhoneNumberStyle">
+        <item name="android:textColor">#0066CC</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:minWidth">32dp</item>
+        <item name="android:minHeight">32dp</item>
+    </style>
 </resources>
