--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-<!--    colorPrimary @color/colorPrimary-->
-<!--    colorPrimaryDark @color/colorPrimaryDark-->
-<!--    colorAccent @color/colorAccent-->
+    <!-- Existing styles remain unchanged -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
     </style>
-<!--    android:textSize-->
+
     <style name="MyCheckBox" parent="@style/MyTextView">
         <item name="android:textSize">15sp</item>
     </style>
-<!--    android:textSize-->
-<!--    android:textStyle-->
+
     <style name="MyTextView">
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
-<!--    android:background-->
+
     <style name="MyButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:background">#0D47A1</item>
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:elevation">4dp</item>
     </style>
+
+    <style name="ViewTripsButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">#4CAF50</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:elevation">4dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="BackButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">#E0E0E0</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:elevation">4dp</item>
+    </style>
+
 
     <style name="AppEditText" parent="Widget.AppCompat.EditText">
         <item name="android:padding">12dp</item>
