--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -6,22 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.assignment1.SecondActivity">
 
-<!--    layout_constraintBottom_toBottomOf=parent-->
-<!--    layout_constraintEnd_toEndOf=parent-->
-<!--    layout_constraintStart_toStartOf=parent-->
-<!--    layout_constraintTop_toTopOf=parent-->
-<!--    layout_constraintVertical_bias=0.2-->
     <TextView
         android:id="@+id/titleText"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
+        android:layout_height="wrap_content"
         android:text="@string/title_activity_2"
-        android:textColor="@android:color/white"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        android:padding="16dp"
+        style="@style/HeaderBannerStyle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
