--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,7 +35,7 @@
     </style>
 
     <style name="ViewTripsButton" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:background">#4CAF50</item>
+        <item name="android:background">#135E17</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:padding">12dp</item>
         <item name="android:elevation">4dp</item>
